# cc

./: .clang-format  .gitignore  00_intro.md  01_scan.md  CMakeLists.txt  Makefile  file_utils.cpp  file_utils.h  main.cpp  pp_input.h  pp_test.cpp  pp_test.h  pptoken.begin.generated.cpp  pptoken.enum.generated.cpp  pptoken.lex  pptoken.match.generated.cpp  pptoken.regex.generated.cpp  preprocessor.cpp  preprocessor.h  string_utils.cpp  string_utils.h
ctrlexpr/: ctrlexpr.cpp  ctrlexpr.grammar  ctrlexpr.h  ctrlexpr.mapping  test.cpp
ctrlexpr/tests/: 100-primary.c  100-primary.ref
docs/: 00_intro.md  01_scan.md  02_scan.md  03_lex.md  04_scan.md  05_scan.md  06_ctrlexpr.md
gnm/: ast.cpp  ast.h  gnm.cpp  parse.cpp  parse.h  pretty_print.cpp  pretty_print.h
lex/: grammar_common.cpp  grammar_common.h  lex.cpp
pptoken/: pp_test.cpp  pptoken.cpp  pptoken.enum.generated.cpp  pptoken.h  pptoken.lex  pptoken.match.generated.cpp  pptoken.regex.generated.cpp
pptoken/tests/: 100-a.ref  100-character-literals.ref  100-comments.ref  100-partial-comment.c  100-partial-string-literal.c  200-basic-floating.c  200-basic-floating.ref  200-character-literal.c  250-dot-ppnum.ref  300-quote-strange.ref
tests/: 100-character-literals.c  100-example.ref  100-floating.ref  100-integer-zero.ref  100-keywords.c  100-keywords.ref  100-line-splice.ref  100-operators.c  100-operators.ref  100-partial-string-literal.c  200-basic-integer-suffix.c  200-basic-integer-suffix.ref  200-character-literal.ref  200-escape-sequence.c  200-escape-sequence.ref  200-header-name.c  200-header-name.ref
utils/: file_utils.cpp  string_utils.cpp  string_utils.h  vector_utils.h
